feat(schedule-service): Implement trainig sessions logic.
